--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <div class="container">
-    <div class=""><img src="images/A.jpg" alt=""></div>
-    <div class=""><img src="images/B.jpg" alt=""></div>
-    <div class=""><img src="images/C.jpg" alt=""></div>
-    <div class=""><img src="images/D.jpg" alt=""></div>
+    <div class="big-layout"><img src="images/A.jpg" alt=""></div>
+    <div class="normal-layout"><img src="images/B.jpg" alt=""></div>
+    <div class="normal-layout"><img src="images/C.jpg" alt=""></div>
+    <div class="wide-layout"><img src="images/D.jpg" alt=""></div>
     <div class=""><img src="images/E.jpg" alt=""></div>
     <div class=""><img src="images/F.jpg" alt=""></div>
     <div class=""><img src="images/G.jpg" alt=""></div>
