--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <div class="normal-layout"><img src="images/B.jpg" alt=""></div>
     <div class="normal-layout"><img src="images/C.jpg" alt=""></div>
     <div class="wide-layout"><img src="images/D.jpg" alt=""></div>
-    <div class=""><img src="images/E.jpg" alt=""></div>
-    <div class=""><img src="images/F.jpg" alt=""></div>
-    <div class=""><img src="images/G.jpg" alt=""></div>
-    <div class=""><img src="images/H.jpg" alt=""></div>
-    <div class=""><img src="images/I.jpg" alt=""></div>
+    <div class="wide-layout"><img src="images/E.jpg" alt=""></div>
+    <div class="normal-layout"><img src="images/F.jpg" alt=""></div>
+    <div class="small-layout"><img src="images/G.jpg" alt=""></div>
+    <div class="small-layout"><img src="images/G.jpg" alt=""></div>
+    <div class="normal-layout"><img src="images/I.jpg" alt=""></div>
+    <div class="small-layout"><img src="images/G.jpg" alt=""></div>
+    <div class="small-layout"><img src="images/G.jpg" alt=""></div>
   </div>
 </body>
 </html>
